--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reading-challenge-app-fe",
+  "homepage": "https://hackathon-team-1.github.io/reading-challenge-app-fe/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
